@@ -1,7 +1,6 @@
 package main;
 
 import centreTri.CentreTri;
-import matiere.Materiaux;
 import planetes.*;
 import vaisseaux.Light;
 import vaisseaux.Lourd;
@@ -9,16 +8,16 @@ import vaisseaux.Normal;
 import vaisseaux.Vaisseau;
 
 import java.util.LinkedList;
-import java.util.Stack;
 
 /**
- * Created by ibada1731710 on 2018-04-26.
+ * Created by ibada1731710 et pagni1731620 on 2018-04-26.
  */
 public class Main {
+    public static boolean fini=false;
     public static LinkedList<CentreTri> tabC=new LinkedList<>();
     public static void main(String[] args) {
 
-        Vaisseau tabV[]=new Vaisseau[50];
+        Vaisseau tabV[]=new Vaisseau[30];
 
         for (int i=0;i<tabV.length;i++){
             int sa=(int)(Math.random()*3)+1;
@@ -32,23 +31,34 @@ public class Main {
                 tabV[i]=new Lourd();
             }
         }
-        for (int i=0;i<90;i++){
+        for (int i=0;i<100;i++){
             tabC.add(new CentreTri());
         }
-        boolean fini=false;
+
         int nb=0;
-        int nb1=0;
         while (!fini){
             tabV[nb].remplir(getRandomPlanet());
-            tabV[nb].go(tabC.getFirst());
+            tabV[nb].go(tabC.get(0));
             nb++;
             if (nb>=tabV.length){
                 fini=true;
             }
 
         }
+        for (int i=0;i<tabC.size();i++){
+            System.out.println("Centre de tri "+(i+1)+": ");
+            System.out.println("Gad: "+tabC.get(i).getStackGad().size());
+            System.out.println("Plut: "+tabC.get(i).getStackPlut().size());
+            System.out.println("Nep: "+tabC.get(i).getStackNep().size());
+            System.out.println("Thul: "+tabC.get(i).getStackThul().size());
+            System.out.println("Terb: "+tabC.get(i).getStackTerb().size());
+            System.out.println("VaissoLine: ");
+            int blabla=tabC.get(i).getVaissoLine().size();
+            for (int j=0;j<blabla;j++){
+                System.out.println("   -"+(j+1)+"- "+tabC.get(i).getVaissoLine().poll().getType());
+            }
 
-
+        }
 
 
     }
@@ -78,8 +88,8 @@ public class Main {
     }
     public static CentreTri next(CentreTri ici){
         return tabC.get(tabC.indexOf(ici)+1);
-
-
     }
+     public static Vaisseau nextVais(CentreTri center){
+        return center.getVaissoLine().poll();
+     }
 }
-
